force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/CSBD_EjecucionProgramadaTests__mdt.object-meta.xml
<CustomObject>
    <label>CSBD: Ejecución programada de tests</label>
    <pluralLabel>CSBD: Ejecuciones programada de tests</pluralLabel>
</CustomObject>