force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/fields/CSBD_BuzonSalidaDisplayName__c.field-meta.xml
<CustomField>
    <fullName>CSBD_BuzonSalidaDisplayName__c</fullName>
    <inlineHelpText>Display name de la Organization-Wide Address que se usará como buzón de salida para el envío del correo de resultado</inlineHelpText>
    <label>Buzón de salida</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>