force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/fields/CSBD_ClientId__c.field-meta.xml
<CustomField>
    <fullName>CSBD_ClientId__c</fullName>
    <label>clientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>