force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/fields/CSBD_ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>CSBD_ClientSecret__c</fullName>
    <label>client_secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>