force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/fields/CSBD_DestinatariosCorreo__c.field-meta.xml
<CustomField>
    <fullName>CSBD_DestinatariosCorreo__c</fullName>
    <label>Destinatarios del correo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>