force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/fields/CSBD_PrefijoClases__c.field-meta.xml
<CustomField>
    <fullName>CSBD_PrefijoClases__c</fullName>
    <inlineHelpText>Solo se tendrán en cuenta las clases cuyo nombre empiece con el prefijo indicado.</inlineHelpText>
    <label>Prefijo de las clases</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>