force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/fields/CSBD_TestSuiteName__c.field-meta.xml
<CustomField>
    <fullName>CSBD_TestSuiteName__c</fullName>
    <label>Nombre de la test suite</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>