force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/fields/CSBD_UmbralCoberturaAviso__c.field-meta.xml
<CustomField>
    <fullName>CSBD_UmbralCoberturaAviso__c</fullName>
    <defaultValue>85</defaultValue>
    <label>% para aviso de cobertura</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>