force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/fields/CSBD_UmbralCoberturaError__c.field-meta.xml
<CustomField>
    <fullName>CSBD_UmbralCoberturaError__c</fullName>
    <defaultValue>80</defaultValue>
    <label>% para error de cobertura</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>