force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/fields/CSBD_Username__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Username__c</fullName>
    <label>username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>