force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/validationRules/CSBD_DestinatariosResultado_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CSBD_DestinatariosResultado_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(CSBD_DestinatariosResultado__c)</errorConditionFormula>
    <errorDisplayField>CSBD_DestinatariosResultado__c</errorDisplayField>
    <errorMessage>Campo requerido</errorMessage>
</ValidationRule>