force-app/main/default/objects/CSBD_EjecucionProgramadaTests__mdt/validationRules/CSBD_UmbralesCobertura.validationRule-meta.xml
<ValidationRule>
    <fullName>CSBD_UmbralesCobertura</fullName>
    <active>true</active>
    <errorConditionFormula>CSBD_UmbralCoberturaAviso__c &lt; CSBD_UmbralCoberturaError__c</errorConditionFormula>
    <errorDisplayField>CSBD_UmbralCoberturaAviso__c</errorDisplayField>
    <errorMessage>Debe ser menor al % para error</errorMessage>
</ValidationRule>